CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_emplmt_exp_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_emplmt_exp_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_emplmt_exp_hist</externalName>
    <fields>
        <fullName>amt_exp__c</fullName>
        <description>amt_exp</description>
        <externalDeveloperName>amt_exp</externalDeveloperName>
        <label>Expense Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_freq_exp__c</fullName>
        <description>cde_freq_exp</description>
        <externalDeveloperName>cde_freq_exp</externalDeveloperName>
        <label>Expense Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>cde_source_vrfyd_exp__c</fullName>
        <description>cde_source_vrfyd_exp</description>
        <externalDeveloperName>cde_source_vrfyd_exp</externalDeveloperName>
        <label>How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verify__c</fullName>
        <description>cde_type_verify</description>
        <externalDeveloperName>cde_type_verify</externalDeveloperName>
        <label>Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_exp__c</fullName>
        <description>dte_exp</description>
        <externalDeveloperName>dte_exp</externalDeveloperName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Verifying Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv__c</fullName>
        <description>idn_emplmt_indiv</description>
        <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
        <label>Employment ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>idn_exp__c</fullName>
        <description>idn_exp</description>
        <externalDeveloperName>idn_exp</externalDeveloperName>
        <label>Expense ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_EMPLMT_EXP__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_EMPLMT_EXP__c</referenceTo>
        <relationshipLabel>Employment Expense Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_emplmt_exp_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_exp_hist__c</fullName>
        <description>idn_exp_hist</description>
        <externalDeveloperName>idn_exp_hist</externalDeveloperName>
        <label>Expense History ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_emplmt_exp_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_emplmt_indiv__c</fullName>
        <description>nbr_seq_emplmt_indiv</description>
        <externalDeveloperName>nbr_seq_emplmt_indiv</externalDeveloperName>
        <label>Number sequence employment Indiv</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_exp_emplmt__c</fullName>
        <description>nbr_seq_exp_emplmt</description>
        <externalDeveloperName>nbr_seq_exp_emplmt</externalDeveloperName>
        <label>Number sequence employment expense</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employment Expense History</label>
    <pluralLabel>Employment Expense History</pluralLabel>
</CustomObject>